--- a/style.css
+++ b/style.css
@@ -27,11 +27,11 @@
 }
 
 .nav_links{
-    width: 400px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    margin: 0;
     
     
 }
@@ -52,7 +52,7 @@
     display:flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding: 0;
+    padding-right: 40px;
     margin:0;   
 }
 
@@ -63,6 +63,7 @@
 
 #header_left_title{
     font-size: 48px;
+    font-weight: 1000;
 }
 
 img{
@@ -70,10 +71,11 @@ img{
     width: auto;
 }
 
-a{
+.nav_links a{
     text-decoration: none;
     color:#F9FAF8;
     font-size: 18px;
+    padding: 10px;
 }
 
 a:hover{
@@ -93,4 +95,64 @@ button{
 
 button:hover{
     background-color: #3c76d4;
+}
+
+.second_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.second_content_header{
+    padding: 30px;
+    font-size: 24px;
+    font-weight: 1000;
+}
+.second_content_boxes{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.box{
+    margin:0;
+    padding:0;
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3c76d4;
+    border-radius: 10%;
+}
+
+.box_info{
+    width: 150px;
+    margin: 20px;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+}
+
+.info{  
+    text-align: center;
+    padding: 10px;;
+}
+
+.third_container{
+
+    background-color: #888c91;
+    padding: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.third_content{
+    font-size: 48px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.third_sign{
+    font-size: 24px;
+    font-weight: 600;
+    display: flex;
+    justify-content: flex-end;
 }
