--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
     font-weight: 1000;
 }
 
-img{
+.header_content_right img{
     height: 250px;
     width: auto;
 }
@@ -119,9 +119,12 @@ button:hover{
     margin:0;
     padding:0;
     width: 150px;
-    height: 150px;
+    height: 100px;
     border: 3px solid #3c76d4;
     border-radius: 10%;
+    display: flex;
+    justify-content: center;  
+    align-items: center;  
 }
 
 .box_info{
@@ -201,4 +204,9 @@ button:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.box img{
+
+    width: 150px;
 }
